# ppt-translator

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  MEMORY_OPTIMIZATION.md  README.md  api.py  app.py  docker-compose.yml  docker-entrypoint.sh  fetch_ssm.py  glossary_template.xlsx  pyproject.toml  pytest.ini  refine-layout.plan.md  requirements.txt
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: tauri-ci.conf.json
consulting/: ppt-review-ui-mockup.html  ppt-translator-quality-design.md
desktop/: README.md  build-sidecar.mjs  build-sidecar.sh  ensure-sidecar.mjs  ensure-sidecar.sh  requirements-desktop.txt  sidecar.py  sidecar.spec  tauri.sh
docs/: ARCHITECTURE.md  AWS_OPERATIONS.md  CICD.md  DESKTOP_RELEASES.md  ENVIRONMENT.md  KEY_PATTERNS.md  MD_EXTRACTION_IMPROVEMENT_PLAN.md
frontend/: README.md  next.config.ts  package-lock.json  package.json  vercel.json
scripts/: create_partial_match_false_positive_pptx.mjs  evaluate_color_mapping.py  verify_color_matching.py
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/.cargo/: config.toml  config.toml.example
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
tests/: test_api.py  test_batch_size.py  test_color_distribution.py  test_color_mapping_audit.py  test_color_match_verifier.py  test_consistency_sweep.py  test_image_compressor.py  test_integration_pdf.py  test_job_manager.py  test_llm_factory.py  test_pdf_to_ppt_layout.py  test_progress_tracking.py  test_quality_records.py  (+6 more)
(+110 files in other folders)
